--- a/style.css
+++ b/style.css
@@ -22,21 +22,27 @@
 
 
 .top2{
-    border: 1px solid red;
-    display: flex;
-    justify-content: space-between;
-    
+    display: grid;
+    grid-template-columns: 80% 180px;
+    padding: 10px;
 }
 .top2>img{
     width: 200px;
-    padding-left: 80px;
+    padding-left: 90px;
     padding-top: 10px;
 }
 .top2>button{
     background-color:#FF9400 ;
     color: white;
-    padding-right: 10px;
+    border-radius: 8px;
+    margin: 22px;
+    border-color: #FF9400;
+    font-size: 1em;
 }
+
+
+
+
 .top3{
     background-image: url(https://assets.loseit.com/website/home/Wave.png), linear-gradient(90deg, rgba(245, 128, 30, 1) 0, rgba(246, 146, 29, 1) 100%);
     background-size: 100% 500px;
@@ -45,4 +51,123 @@
     padding: 50px 0px;
     width: 100%;
     background-color: white;
+}
+
+.top3Child>img{
+    width: 250px;
+    padding-left: 280px;
+}
+.top3Child{
+    display: flex;
+}
+.line>h1{
+    padding-left: 80px;
+    color: #455555;
+    font-size: 50px;
+    font-weight: 900;
+}
+.line>p{
+    padding-top: 10px;
+    padding-left: 80px;
+    font-size: 20px;
+    font-weight: 400;
+    color: #455555;
+    padding-bottom: 40px;
+}
+.line>button{
+    margin-left: 80px;
+    width: 160px;
+    height: 50px;
+    background-color: #183962;
+    color: white;
+    border-color: #183962;
+    border-radius:4px ;
+    letter-spacing: 1px;
+}
+.apple{
+    display: flex;
+}
+.apple>img{
+    padding-top: 30px;
+    width: 30px;
+    height: 30px;
+    padding-left: 80px;
+}
+.apple1>img{
+    width: 25px;
+    height: 25px;
+    padding-top: 35px;
+    padding-left: 5x;
+}
+.andriod{
+    display: flex;
+}
+.andriod>img{
+    padding-top: 30px;
+    width: 30px;
+    height: 30px;
+    padding-left: 30px;
+}
+
+
+
+/**Mid section**/
+
+.mid1{
+    padding: 20px;
+    margin: 30px auto;
+    text-align: center;
+
+}
+
+.mid1>h2{
+    font-weight: 500;
+    font-size: 28px;
+    font-family: inherit;
+    color: #183962;
+}
+
+.mid1Child1>img{
+    width: 140px;
+}
+.mid1Child{
+    display: flex;
+    padding-left: 100px;
+}
+.mid1Child1{
+    margin-left: 4%;
+    width: 300px;
+    margin-top: 20px;
+    text-align: center;
+}
+.mid1Child1>h3{
+    font-size: 25px;
+    font-weight: 500;
+    color: #FF9400;
+}
+.mid1Child1>p{
+    color: #455555;
+}
+.mid2{
+    padding: 20px;
+    display: flex;
+}
+
+
+.mid1Child2>img{
+    width: 100px;
+}
+.mid1Child2>h3{
+    font-size: 25px;
+    font-weight: 500;
+    color: #FF9400;
+}
+.mid1Child2{
+    margin-left: 18%;
+    width: 350px;
+    margin-top: 20px;
+    text-align: center;
+}
+.mid1Child2>p{
+    color: #455555;
 }
