day-5 task completed

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@
     padding-left: 100px;
 }
 .mid1Child1{
-    margin-left: 4%;
+    margin-left: 7%;
     width: 300px;
     margin-top: 20px;
     text-align: center;
@@ -198,7 +198,7 @@
 .midPoint>hr{
     border: 5px solid #FF9400 ;
     width: 50px;
-    margin-left: 650px;
+    margin-left: 720px;
 }
 .midPoint>h3{
     padding-top: 50px;
@@ -242,6 +242,7 @@
 
 .midBa{
     display: flex;
+    padding-left: 10px;
 }
 
 .img>img{
@@ -251,7 +252,7 @@
 .img{
     text-align: center;
     width: 30%;
-    margin-left: 150px;
+    margin-left: 200px;
     color: white;
     padding-bottom: 40px;
 }
@@ -299,7 +300,7 @@
     padding-top: 50px;
     display: flex;
     text-align: center;
-    padding-left: 100px;
+    padding-left: 200px;
     padding-bottom: 50px;
 
 }
@@ -327,7 +328,7 @@
     color: white;
     width: 210px;
     height: 50px;
-    margin-left: 550px;
+    margin-left: 650px;
     border-radius: 5px;
     border-color: #183962;
     font-weight: 300;
@@ -343,12 +344,12 @@
 }
 .bottom_child{
     display: flex;
-    padding-left: 350px;
+    padding-left: 520px;
 }
 
 .bottom_child>img{
     width: 179px;
-    margin-left:80px;
+    margin-left:30px
 
 }
 .bottom{
