--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -255,6 +256,10 @@
     margin-left: 200px;
     color: white;
     padding-bottom: 40px;
+}
+
+.img>h1{
+    color: white;
 }
 .img>p{
     color: #FF9400;
